IDP-1121 Explicitly preserve input order o IdPAttribute#setValues
https://issues.shibboleth.net/jira/browse/IDP-1121

By using stream we guarantee that if the input collection
says "Spliterator.ORDERED" then the internal list will be so ordered.